--- a/app/src/main/res/layout/layout_search_lesson_item.xml
+++ b/app/src/main/res/layout/layout_search_lesson_item.xml
@@ -1,99 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="horizontal"
-              android:background="@drawable/white_grey_selector"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="horizontal"
+                android:background="@drawable/white_grey_selector"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <FrameLayout
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_marginTop="@dimen/px30"
-            android:layout_marginBottom="@dimen/px30"
-            android:layout_gravity="center_vertical"
+    <TextView
+            android:id="@+id/search_lesson_price"
+            android:textColor="@color/font_red"
+            android:textSize="@dimen/font_28px"
+            android:text="免费"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        <ImageView
-                android:id="@+id/search_lesson_image"
-                android:scaleType="fitXY"
-                android:src="@drawable/default_avatar_grey"
-                android:layout_width="@dimen/px261"
-                android:layout_height="@dimen/px149"/>
-
-        <TextView
-                android:id="@+id/search_lesson_state"
-                android:textSize="@dimen/font_26px"
-                android:textColor="@color/white"
-                android:text="待上课"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-    </FrameLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/px30"
+            />
 
     <LinearLayout
             android:orientation="vertical"
             android:padding="@dimen/px30"
             android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/search_lesson_price">
 
         <TextView
                 android:id="@+id/search_lesson_name"
                 android:textColor="@color/font_black"
                 android:textSize="@dimen/font_30px"
-                android:text="8小时之外如何利用互联网学习新知识"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="title"/>
 
         <TextView
                 android:id="@+id/search_lesson_time"
                 android:textColor="@color/common_text"
                 android:textSize="@dimen/font_28px"
                 android:layout_marginTop="@dimen/px10"
-                android:text="明天15：00 100分钟"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/px10"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <cn.xiaojs.xma.ui.widget.RoundedImageView
-                    android:id="@+id/search_lesson_teacher_head"
-                    app:oval="true"
-                    android:scaleType="fitXY"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/default_avatar_grey"
-                    android:layout_width="@dimen/px40"
-                    android:layout_height="@dimen/px40"/>
-
-            <TextView
-                    android:id="@+id/search_lesson_teacher_name"
-                    android:textColor="@color/common_text"
-                    android:textSize="@dimen/font_28px"
-                    android:text="李海"
-                    android:layout_marginLeft="@dimen/px15"
-                    android:layout_gravity="center_vertical"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"/>
-
-            <TextView
-                    android:id="@+id/search_lesson_price"
-                    android:textColor="@color/font_red"
-                    android:textSize="@dimen/font_28px"
-                    android:text="￥150.00"
-                    android:layout_gravity="center_vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:text="time"/>
     </LinearLayout>
-</LinearLayout>
+
+
+</RelativeLayout>
+
+
+        <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:background="@drawable/white_grey_selector"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<FrameLayout-->
+        <!--android:layout_marginLeft="@dimen/px30"-->
+        <!--android:layout_marginTop="@dimen/px30"-->
+        <!--android:layout_marginBottom="@dimen/px30"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<ImageView-->
+        <!--android:id="@+id/search_lesson_image"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:src="@drawable/default_lesson_cover"-->
+        <!--android:layout_width="@dimen/px261"-->
+        <!--android:layout_height="@dimen/px149"/>-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/search_lesson_state"-->
+        <!--android:textSize="@dimen/font_26px"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"/>-->
+        <!--</FrameLayout>-->
+
+        <!--<LinearLayout-->
+        <!--android:orientation="vertical"-->
+        <!--android:padding="@dimen/px30"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/search_lesson_name"-->
+        <!--android:textColor="@color/font_black"-->
+        <!--android:textSize="@dimen/font_30px"-->
+        <!--android:maxLines="1"-->
+        <!--android:ellipsize="end"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"/>-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/search_lesson_time"-->
+        <!--android:textColor="@color/common_text"-->
+        <!--android:textSize="@dimen/font_28px"-->
+        <!--android:layout_marginTop="@dimen/px10"-->
+        <!--android:maxLines="1"-->
+        <!--android:ellipsize="end"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"/>-->
+
+        <!--<LinearLayout-->
+        <!--android:orientation="horizontal"-->
+        <!--android:layout_marginTop="@dimen/px10"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<ImageView-->
+        <!--android:id="@+id/search_lesson_teacher_head"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:src="@drawable/default_avatar_grey"-->
+        <!--android:layout_width="@dimen/px40"-->
+        <!--android:layout_height="@dimen/px40"/>-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/search_lesson_teacher_name"-->
+        <!--android:textColor="@color/common_text"-->
+        <!--android:textSize="@dimen/font_28px"-->
+        <!--android:text="未知"-->
+        <!--android:layout_marginLeft="@dimen/px15"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:maxLines="1"-->
+        <!--android:ellipsize="end"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:layout_height="wrap_content"/>-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/search_lesson_price"-->
+        <!--android:textColor="@color/font_red"-->
+        <!--android:textSize="@dimen/font_28px"-->
+        <!--android:text="免费"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"/>-->
+        <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
