--- a/app/src/main/res/layout/lcim_chat_input_bottom_bar_layout.xml
+++ b/app/src/main/res/layout/lcim_chat_input_bottom_bar_layout.xml
@@ -1,35 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/bottomLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/bottomLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:orientation="vertical">
 
     <View style="@style/LCIMDividerLine.Horizontal"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="@dimen/lcim_bottom_bar_height"
-        android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/lcim_bottom_bar_height"
+            android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical">
-
-            <Button
-                android:id="@+id/input_bar_btn_action"
-                android:layout_width="@dimen/lcim_bottom_bar_button_size"
-                android:layout_height="@dimen/lcim_bottom_bar_button_size"
-                android:layout_marginLeft="3dp"
-                android:background="@drawable/lcim_bottom_bar_action_button_bg"/>
-        </LinearLayout>
-
-        <include layout="@layout/lcim_bottom_bar_text_layout"/>
+        <EditText
+                android:id="@+id/input_bar_et_content"
+                style="@style/lcim_input_bar_edittext_style"
+                android:layout_weight="1.0"
+                android:layout_width="0dp"/>
+        <ImageButton
+                android:id="@+id/input_bar_btn_voice"
+                style="@style/lcim_input_bar_button_style"
+                android:src="@drawable/lcim_bottom_bar_voice_button_bg"
+                android:layout_width="wrap_content"/>
     </LinearLayout>
 
     <include layout="@layout/lcim_bottom_bar_more_layout"/>
 </LinearLayout>
+
+        <!--<LinearLayout-->
+        <!--android:id="@+id/bottomLayout"-->
+        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@android:color/white"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<View style="@style/LCIMDividerLine.Horizontal"/>-->
+
+        <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:minHeight="@dimen/lcim_bottom_bar_height"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:visibility="gone">-->
+
+        <!--<Button-->
+        <!--android:id="@+id/input_bar_btn_action"-->
+        <!--android:layout_width="@dimen/lcim_bottom_bar_button_size"-->
+        <!--android:layout_height="@dimen/lcim_bottom_bar_button_size"-->
+        <!--android:layout_marginLeft="3dp"-->
+        <!--android:background="@drawable/lcim_bottom_bar_action_button_bg"/>-->
+        <!--</LinearLayout>-->
+
+        <!--<include layout="@layout/lcim_bottom_bar_text_layout"/>-->
+        <!--</LinearLayout>-->
+
+        <!--<include layout="@layout/lcim_bottom_bar_more_layout"/>-->
+        <!--</LinearLayout>-->
