--- a/app/src/main/res/values/lcim_styles.xml
+++ b/app/src/main/res/values/lcim_styles.xml
@@ -80,8 +80,8 @@
 
     <!-- Avatar -->
     <style name="LCIMAvatar">
-        <item name="android:layout_width">45dp</item>
-        <item name="android:layout_height">45dp</item>
+        <item name="android:layout_width">@dimen/px77</item>
+        <item name="android:layout_height">@dimen/px77</item>
         <item name="android:scaleType">centerCrop</item>
         <!--<item name="android:src">@drawable/chat_default_user_avatar</item>-->
     </style>
