--- a/app/src/main/res/layout/activity_classroom.xml
+++ b/app/src/main/res/layout/activity_classroom.xml
@@ -52,14 +52,31 @@
                 android:layout_height="match_parent"
                 android:background="@color/white"
                 android:visibility="gone">
-            <TextView
-                    android:id="@+id/tip_txt_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textColor="@color/font_dark_gray"
-                    android:textSize="@dimen/font_28px"
-                    android:text="@string/no_network"/>
+
+            <LinearLayout android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center"
+                          android:orientation="vertical">
+
+                <TextView
+                        android:id="@+id/tip_title_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/font_black"
+                        android:textSize="@dimen/font_32px"
+                        android:text="@string/no_network"/>
+
+                <TextView
+                        android:id="@+id/tip_txt_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@color/font_dark_gray"
+                        android:textSize="@dimen/font_28px"
+                        android:text="@string/no_network"/>
+            </LinearLayout>
+
         </FrameLayout>
 
         <!--控制面板, (包含)直播-->
