--- a/app/src/main/res/layout/lcim_chat_item_right_layout.xml
+++ b/app/src/main/res/layout/lcim_chat_item_right_layout.xml
@@ -31,9 +31,9 @@
 
             <ProgressBar
                 android:id="@+id/chat_right_progressbar"
-                style="@android:style/Widget.ProgressBar.Large"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                style="@android:style/Widget.Holo.ProgressBar.Small"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:layout_gravity="center_vertical"/>
 
             <TextView
@@ -65,7 +65,7 @@
         <ImageView
             android:id="@+id/chat_right_iv_avatar"
             style="@style/LCIMAvatar"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="10dp"/>
     </RelativeLayout>
