--- a/app/src/main/res/values/lcim_strings.xml
+++ b/app/src/main/res/values/lcim_strings.xml
@@ -19,5 +19,7 @@
     <string name="lcim_message_shorthand_image">[图片]</string>
     <string name="lcim_message_shorthand_location">[位置]</string>
     <string name="lcim_message_shorthand_audio">[语音]</string>
+    <string name="lcim_message_shorthand_video">[视频]</string>
+    <string name="lcim_message_shorthand_file">[文件]</string>
     <string name="lcim_message_shorthand_unknown">[未知]</string>
 </resources>
