--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -8,18 +8,33 @@
         android:background="@color/white"
         >
 
-    <EditText
+    <cn.xiaojs.xma.ui.widget.EditTextDel
             android:id="@+id/search_view"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/px58"
-            android:hint="@string/search"
-            android:textSize="@dimen/font_27px"
-            android:background="@drawable/common_edittext_bg"
             android:drawableLeft="@drawable/ic_search"
-            android:layout_margin="@dimen/px15"
+            android:hint="@string/search"
+            android:layout_gravity="center_vertical"
+            android:textSize="@dimen/font_27px"
+            android:gravity="center_vertical"
             android:maxLines="1"
-            android:singleLine="true"
-            android:padding="5dp"/>
+            android:background="@drawable/common_edittext_bg"
+            android:layout_margin="@dimen/px15"
+            android:padding="5dp"
+            android:layout_height="@dimen/px58"
+            android:singleLine="true"/>
+
+    <!--<EditText-->
+    <!--android:id="@+id/search_view"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="@dimen/px58"-->
+    <!--android:hint="@string/search"-->
+    <!--android:textSize="@dimen/font_27px"-->
+    <!--android:background="@drawable/common_edittext_bg"-->
+    <!--android:drawableLeft="@drawable/ic_search"-->
+    <!--android:layout_margin="@dimen/px15"-->
+    <!--android:maxLines="1"-->
+    <!--android:singleLine="true"-->
+    <!--android:padding="5dp"/>-->
 
     <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshExpandableListView
             android:id="@+id/list_contact"
