--- a/app/src/main/res/layout/teaching_subject_list_item.xml
+++ b/app/src/main/res/layout/teaching_subject_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/white">
 
     <TextView
             android:id="@+id/subject_name"
@@ -26,7 +27,8 @@
             android:src="@drawable/ic_teaching_subject_check"
             android:visibility="gone"/>
 
-    <View style="@style/DividerHorizontal"
-          android:layout_below="@+id/subject_name"/>
+    <View
+            style="@style/DividerHorizontal"
+            android:layout_below="@+id/subject_name"/>
 
 </RelativeLayout>
