--- a/app/src/main/res/layout/activity_grade_home.xml
+++ b/app/src/main/res/layout/activity_grade_home.xml
@@ -21,7 +21,7 @@
 
                 <ImageView
                         android:id="@+id/grade_home_cover"
-                        android:src="@drawable/ic_ad"
+                        android:src="@drawable/ic_ad_help"
                         android:scaleType="fitXY"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
