--- a/app/src/main/res/layout/layout_dlg_list.xml
+++ b/app/src/main/res/layout/layout_dlg_list.xml
@@ -5,4 +5,5 @@
           android:dividerHeight="0dp"
           android:divider="@android:color/transparent"
           android:listSelector="@android:color/transparent"
+          android:scrollbars="none"
         />
