--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -15,12 +15,14 @@
                 android:orientation="horizontal">
 
             <RelativeLayout
+                    android:id="@+id/s_root"
                     android:layout_width="match_parent"
                     android:layout_marginLeft="@dimen/px30"
                     android:layout_marginRight="@dimen/px30"
                     android:background="@drawable/grey_conner_bg"
                     android:layout_gravity="center_vertical"
-                    android:layout_height="@dimen/px60">
+                    android:layout_height="@dimen/px60"
+                    android:clickable="true">
 
                 <TextView
                         android:id="@+id/my_course_search"
