--- a/app/src/main/res/layout/lcim_chat_item_right_layout.xml
+++ b/app/src/main/res/layout/lcim_chat_item_right_layout.xml
@@ -10,11 +10,17 @@
 
     <TextView
         android:id="@+id/chat_right_tv_time"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="3dp"
         android:layout_marginTop="10dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:textColor="@color/font_white"
+        android:textSize="@dimen/font_20px"
+        android:background="@drawable/chat_time_bg"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
