--- a/app/src/main/res/layout/activity_upgrade.xml
+++ b/app/src/main/res/layout/activity_upgrade.xml
@@ -48,6 +48,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
+                android:layout_marginBottom="5dp"
                 />
         <TextView
                 android:id="@+id/tv_tips_title"
@@ -61,7 +62,8 @@
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:visibility="visible"/>
+                android:visibility="gone"
+                />
 
         <TextView
                 android:id="@+id/tv_update_detail"
