--- a/app/src/main/res/layout/layout_lesson_person_view.xml
+++ b/app/src/main/res/layout/layout_lesson_person_view.xml
@@ -6,6 +6,7 @@
                 android:layout_height="wrap_content">
 
     <FrameLayout
+            android:id="@+id/info1_layout"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
@@ -26,7 +27,7 @@
                     android:layout_height="@dimen/px80"/>
 
             <LinearLayout
-                    android:layout_marginLeft="@dimen/px20"
+                    android:layout_marginLeft="@dimen/px14"
                     android:layout_toRightOf="@+id/image1"
                     android:layout_centerInParent="true"
                     android:orientation="vertical"
@@ -36,22 +37,27 @@
                 <TextView
                         android:id="@+id/name1"
                         android:textColor="@color/font_black"
-                        android:textSize="@dimen/font_30px"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:textSize="@dimen/font_26px"
+                        android:layout_width="@dimen/px210"
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"/>
 
                 <TextView
                         android:id="@+id/desc1"
                         android:textColor="@color/common_text"
-                        android:textSize="@dimen/font_26px"
+                        android:textSize="@dimen/font_24px"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"/>
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
 
     <FrameLayout
-            android:layout_centerInParent="true"
+            android:layout_toRightOf="@+id/info1_layout"
+            android:layout_marginLeft="@dimen/px14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -71,7 +77,7 @@
                     android:layout_height="@dimen/px80"/>
 
             <LinearLayout
-                    android:layout_marginLeft="@dimen/px20"
+                    android:layout_marginLeft="@dimen/px14"
                     android:layout_toRightOf="@+id/image2"
                     android:layout_centerInParent="true"
                     android:orientation="vertical"
@@ -81,18 +87,20 @@
                 <TextView
                         android:id="@+id/name2"
                         android:textColor="@color/font_black"
-                        android:textSize="@dimen/font_30px"
-                        android:text="dafs"
+                        android:textSize="@dimen/font_26px"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"/>
 
                 <TextView
                         android:id="@+id/desc2"
                         android:textColor="@color/common_text"
-                        android:textSize="@dimen/font_26px"
-                        android:text="dafs"
+                        android:textSize="@dimen/font_24px"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"/>
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
@@ -119,7 +127,7 @@
                     android:layout_height="@dimen/px80"/>
 
             <LinearLayout
-                    android:layout_marginLeft="@dimen/px20"
+                    android:layout_marginLeft="@dimen/px14"
                     android:layout_toRightOf="@+id/image3"
                     android:layout_centerInParent="true"
                     android:orientation="vertical"
@@ -129,18 +137,20 @@
                 <TextView
                         android:id="@+id/name3"
                         android:textColor="@color/font_black"
-                        android:textSize="@dimen/font_30px"
-                        android:text="dafs"
+                        android:textSize="@dimen/font_26px"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"/>
 
                 <TextView
                         android:id="@+id/desc3"
                         android:textColor="@color/common_text"
-                        android:textSize="@dimen/font_26px"
-                        android:text="dafs"
+                        android:textSize="@dimen/font_24px"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:maxLines="1"
+                        android:ellipsize="end"/>
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
