--- a/app/src/main/res/layout/layout_material_item.xml
+++ b/app/src/main/res/layout/layout_material_item.xml
@@ -45,7 +45,9 @@
                     android:textSize="@dimen/font_30px"
                     android:text="人力资源管理实务"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:ellipsize="end"/>
 
             <TextView
                     android:layout_marginTop="@dimen/px10"
@@ -54,7 +56,9 @@
                     android:textColor="@color/common_text"
                     android:text="0.8M 2017-11-11 20:22"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:ellipsize="end"/>
         </LinearLayout>
     </RelativeLayout>
 
@@ -64,7 +68,9 @@
             android:orientation="horizontal"
             android:background="@color/moment_write_comment_bg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp">
 
         <TextView
                 android:id="@+id/material_item_opera1"
@@ -78,7 +84,8 @@
                 android:text="保存到手机"
                 android:gravity="center"
                 android:drawablePadding="@dimen/px10"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
 
         <TextView
                 android:id="@+id/material_item_opera2"
@@ -86,10 +93,9 @@
                 android:layout_weight="1"
                 android:textColor="@color/common_text"
                 android:textSize="@dimen/font_26px"
-                android:drawableTop="@drawable/ic_preservation"
-                android:text="保存到我的资料库"
+                android:drawableTop="@drawable/ic_share"
+                android:text="@string/share"
                 android:gravity="center"
-                android:drawablePadding="@dimen/px10"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
 </LinearLayout>
